--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Brief overview of new ES2015 features",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server -d -p --progress --hot --inline --colors"
+    "start": "webpack-dev-server -d --inline"
   },
   "keywords": [
     "JavaScript",
